[tool.poetry]
name = "plotly-dash-traefik-example"
version = "0.1.0"
description = ""
authors = ["David H Hagan <david.hagan@quant-aq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
dash = "^1.19.0"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
